# -t-i-2

./: .gitignore  create_bill.py  readme.md
backend/: .env.base  Cargo copy.toml  Cargo.toml  db.sql  readme.md
backend/public/: index.html  leptos_demo-a41b9fa6f4f809d0.js  leptos_demo-a41b9fa6f4f809d0_bg.wasm  leptos_demo-dc6a002ce9fb680d.js  leptos_demo-dc6a002ce9fb680d_bg.wasm  main-e2b11710f4c18f55.css
backend/src/: main copy.rs  main.rs
backend/src/routes/: auth.rs  expenses.rs
backend/src/utils/: license.rs  mod.rs  suid.rs  token.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package.json  readme.md
frontend/src/: main.rs  store.rs
frontend/src/components/AddInvoiceModal/: mod.rs
frontend/src/components/Dashboard/: _dashboard.scss  mod.rs
frontend/src/components/Nav/: _nav.scss  mod.rs
frontend/src/components/StatCard/: _stat_card.scss  mod.rs
frontend/src/components/UploadModal/: _upload_modal.scss  mod.rs
frontend/src/components/expenses/: mod.rs
frontend/src/components/home/: _home.scss  mod.rs
frontend/src/components/login/: _login.scss  mod.rs
frontend/style/: color_base.scss  main.scss
